/*
Copyright Â© 2021-2022 Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";
package nocloud.states;

import "google/protobuf/struct.proto";

enum NoCloudState {
    INIT = 0;
    UNKNOWN = 1;
    STOPPED = 2;
    RUNNING = 3;
    FAILURE  = 4;
    DELETED = 5;
    SUSPENDED = 6;
    OPERATION = 7;
}

message State {
    NoCloudState state = 1; // NoCloud Instance State
    map<string, google.protobuf.Value> meta = 2; // Driver(Provider/Hypervisor) State data
    optional int64 ts = 3;
}

message ObjectState {
    string uuid = 1;
    State state = 2;
}